Update App Info

--- a/PolyMCPortable/App/AppInfo/appinfo.ini
+++ b/PolyMCPortable/App/AppInfo/appinfo.ini
@@ -5,8 +5,8 @@ Version=3.6
 [Details]
 Name=PolyMC Portable
 AppId=PolyMCPortable
-Publisher=PolyMC Team
-Homepage=https://polymc.org/
+Publisher=Fayne Aldan
+Homepage=https://FayneAldan.github.io/PolyMCPortable/
 Category=Games
 Description=Minecraft launcher
 Language=Multilingual
