--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ PolyMCPortable/App/PolyMC/*
 PolyMCPortable/Data/
 *.paf.exe
 PolyMCPortable/PolyMCPortable.exe
+PolyMCPortable/App/AppInfo/pac_installer_log.ini
