Add Donate link

--- a/PolyMCPortable/App/AppInfo/appinfo.ini
+++ b/PolyMCPortable/App/AppInfo/appinfo.ini
@@ -7,6 +7,7 @@ Name=PolyMC Portable
 AppId=PolyMCPortable
 Publisher=Fayne Aldan
 Homepage=https://FayneAldan.github.io/PolyMCPortable/
+Donate=https://opencollective.com/polymc
 Category=Games
 Description=Minecraft launcher
 Language=Multilingual
