Exclude temp files

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ PolyMCPortable/Data
 *.paf.exe
 PolyMCPortable/PolyMCPortable.exe
 PolyMCPortable/App/AppInfo/pac_installer_log.ini
+
+PolyMCPortable/Other/Source/*.bmp
+PolyMCPortable/Other/Source/*.ico
+PolyMCPortable/Other/Source/*.nsi
+PolyMCPortable/Other/Source/**/*.nsh
