Update to PolyMC 1.4.0
Update Java paths to be relative

--- a/PolyMCPortable/App/AppInfo/Launcher/PolyMCPortable.ini
+++ b/PolyMCPortable/App/AppInfo/Launcher/PolyMCPortable.ini
@@ -8,10 +8,4 @@ WaitForProgram=false
 WaitForOtherInstances=false
 
 [Environment]
-POLYMC_JAVA_PATHS=%PAL:PortableAppsDir%\CommonFiles\Java\bin\javaw.exe;%PAL:PortableAppsDir%\CommonFiles\Java64\bin\javaw.exe;%PAL:PortableAppsDir%\CommonFiles\JDK\bin\javaw.exe;%PAL:PortableAppsDir%\CommonFiles\JDK64\bin\javaw.exe;%PAL:PortableAppsDir%\CommonFiles\OpenJDK\bin\javaw.exe;%PAL:PortableAppsDir%\CommonFiles\OpenJDK64\bin\javaw.exe;%PAL:PortableAppsDir%\CommonFiles\OpenJDKJRE\bin\javaw.exe;%PAL:PortableAppsDir%\CommonFiles\OpenJDKJRE64\bin\javaw.exe
-
-[FileWrite1]
-Type=Replace
-File=%PAL:DataDir%\polymc.cfg
-Find=%PAL:LastPortableAppsBaseDir:ForwardSlash%/
-Replace=%PAL:PortableAppsBaseDir:ForwardSlash%/
+POLYMC_JAVA_PATHS="..\..\CommonFiles\Java\bin\javaw.exe;..\..\CommonFiles\Java64\bin\javaw.exe;..\..\CommonFiles\JDK\bin\javaw.exe;..\..\CommonFiles\JDK64\bin\javaw.exe;..\..\CommonFiles\OpenJDK\bin\javaw.exe;..\..\CommonFiles\OpenJDK64\bin\javaw.exe;..\..\CommonFiles\OpenJDKJRE\bin\javaw.exe;..\..\CommonFiles\OpenJDKJRE64\bin\javaw.exe"
