--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,4 @@
 PortableApps.comInstaller
 PortableApps.comLauncher
-PolyMCPortable/Data
-PolyMCPortable/help.html
+PrismLauncherPortable/Data
+PrismLauncherPortable/help.html
