--- a/PrismLauncherPortable/App/AppInfo/appinfo.ini
+++ b/PrismLauncherPortable/App/AppInfo/appinfo.ini
@@ -3,11 +3,11 @@ Type=PortableAppsFormat
 Version=3.6
 
 [Details]
-Name=PolyMC Portable
-AppId=PolyMCPortable
+Name=Prism Launcher Portable
+AppId=PrismLauncherPortable
 Publisher=Fayne Aldan
-Homepage=https://FayneAldan.github.io/PolyMCPortable/
-Donate=https://opencollective.com/polymc
+Homepage=https://FayneAldan.github.io/PrismLauncherPortable/
+Donate=https://opencollective.com/PrismLauncher
 Category=Games
 Description=Minecraft launcher
 Language=Multilingual
@@ -22,9 +22,9 @@ CommercialUse=true
 UsesJava=yes
 
 [Version]
-PackageVersion=1.4.2.0
-DisplayVersion=1.4.2
+PackageVersion=5.0.0.0
+DisplayVersion=5.0
 
 [Control]
 Icons=1
-Start=PolyMCPortable.exe
+Start=PrismLauncherPortable.exe
