Make legacy version optional

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ PrismLauncherPortable/App/PrismLauncher/*
 !PrismLauncherPortable/App/PrismLauncher/whatgoeshere.txt
 PrismLauncherPortable/App/PrismLauncherLegacy/*
 !PrismLauncherPortable/App/PrismLauncherLegacy/whatgoeshere.txt
+PrismLauncherPortable/Optional1
 PrismLauncherPortable/Data
 
 *.paf.exe
