--- a/PrismLauncherPortable/App/AppInfo/appinfo.ini
+++ b/PrismLauncherPortable/App/AppInfo/appinfo.ini
@@ -22,9 +22,17 @@ CommercialUse=true
 UsesJava=yes
 
 [Version]
-PackageVersion=5.0.0.1
-DisplayVersion=5.0
+PackageVersion=5.1.0.0
+DisplayVersion=5.1
 
 [Control]
 Icons=1
 Start=PrismLauncherPortable.exe
+
+[Associations]
+FileTypes=zip,mrpack
+FileTypeCommandLine=-I %1
+
+[FileTypeIcons]
+zip=app
+mrpack=app
