--- a/PrismLauncherPortable/App/AppInfo/installer.ini
+++ b/PrismLauncherPortable/App/AppInfo/installer.ini
@@ -2,7 +2,7 @@
 OptionalComponents=true
 MainSectionTitle=Prism Launcher Portable [Required]
 MainSectionDescription=Install the portable app for Windows 10 and newer
-OptionalSectionTitle=Legacy Support
+OptionalSectionTitle=Legacy Support (Untested)
 OptionalSectionDescription=Install the portable app for Windows 7 and 8.1
 OptionalSectionSelectedInstallType=Legacy
 OptionalSectionNotSelectedInstallType=NoLegacy
