--- a/PrismLauncherPortable/App/AppInfo/installer.ini
+++ b/PrismLauncherPortable/App/AppInfo/installer.ini
@@ -1,9 +1,9 @@
 [OptionalComponents]
 OptionalComponents=true
 MainSectionTitle=Prism Launcher Portable [Required]
-MainSectionDescription=Install the portable app for Windows 10 and newer
+MainSectionDescription=Install the portable app for Windows 10 and newer (64-bit only)
 OptionalSectionTitle=Legacy Support (Untested)
-OptionalSectionDescription=Install the portable app for Windows 7 and 8.1
+OptionalSectionDescription=Install the portable app for Windows 7 and newer (32-bit and 64-bit)
 OptionalSectionSelectedInstallType=Legacy
 OptionalSectionNotSelectedInstallType=NoLegacy
 OptionalSectionPreSelectedIfNonEnglishInstall=false
