--- a/PrismLauncherPortable/App/AppInfo/appinfo.ini
+++ b/PrismLauncherPortable/App/AppInfo/appinfo.ini
@@ -5,8 +5,8 @@ Version=3.7
 [Details]
 Name=Prism Launcher Portable
 AppId=PrismLauncherPortable
-Publisher=Fayne Aldan
-Homepage=https://FayneAldan.github.io/PrismLauncherPortable/
+Publisher=RuiNtD
+Homepage=https://RuiNtD.github.io/PrismLauncherPortable/
 Donate=https://opencollective.com/PrismLauncher
 Category=Games
 Description=Minecraft launcher
