--- a/PrismLauncherPortable/App/AppInfo/appinfo.ini
+++ b/PrismLauncherPortable/App/AppInfo/appinfo.ini
@@ -22,8 +22,8 @@ CommercialUse=true
 UsesJava=yes
 
 [Version]
-PackageVersion=6.3.0.1
-DisplayVersion=6.3
+PackageVersion=6.3.0.2
+DisplayVersion=6.3 Dev Test 1
 
 [Control]
 Icons=1
