--- a/PrismLauncherPortable/App/AppInfo/appinfo.ini
+++ b/PrismLauncherPortable/App/AppInfo/appinfo.ini
@@ -22,8 +22,8 @@ CommercialUse=true
 UsesJava=yes
 
 [Version]
-PackageVersion=6.3.0.2
-DisplayVersion=6.3 Dev Test 1
+PackageVersion=7.0.0.0
+DisplayVersion=7.0
 
 [Control]
 Icons=1
