Change homepage back

--- a/PrismLauncherPortable/App/AppInfo/appinfo.ini
+++ b/PrismLauncherPortable/App/AppInfo/appinfo.ini
@@ -6,7 +6,7 @@ Version=3.7
 Name=Prism Launcher Portable
 AppId=PrismLauncherPortable
 Publisher=RuiNtD
-Homepage=https://prismlauncher.org/
+Homepage=https://RuiNtD.github.io/PrismLauncherPortable/
 Donate=https://opencollective.com/PrismLauncher
 Category=Games
 Description=Minecraft launcher
