--- a/PrismLauncherPortable/App/AppInfo/appinfo.ini
+++ b/PrismLauncherPortable/App/AppInfo/appinfo.ini
@@ -6,7 +6,7 @@ Version=3.7
 Name=Prism Launcher Portable
 AppId=PrismLauncherPortable
 Publisher=RuiNtD
-Homepage=https://RuiNtD.github.io/PrismLauncherPortable/
+Homepage=https://prismlauncher.org/
 Donate=https://opencollective.com/PrismLauncher
 Category=Games
 Description=Minecraft launcher
@@ -22,8 +22,8 @@ CommercialUse=true
 UsesJava=yes
 
 [Version]
-PackageVersion=7.0.0.0
-DisplayVersion=7.0
+PackageVersion=7.0.0.1
+DisplayVersion=7.0 Dev Test 1
 
 [Control]
 Icons=1
