Update to 8.0 Remove legacy support (upstream) Update to PA.com 3.8 Add base app IDs (for taskbar pinning)

--- a/PrismLauncherPortable/App/AppInfo/appinfo.ini
+++ b/PrismLauncherPortable/App/AppInfo/appinfo.ini
@@ -1,6 +1,6 @@
 [Format]
 Type=PortableAppsFormat
-Version=3.7
+Version=3.8
 
 [Details]
 Name=Prism Launcher Portable
@@ -22,12 +22,14 @@ CommercialUse=true
 UsesJava=yes
 
 [Version]
-PackageVersion=7.2.0.0
-DisplayVersion=7.2
+PackageVersion=8.0.0.0
+DisplayVersion=8.0
 
 [Control]
 Icons=1
 Start=PrismLauncherPortable.exe
+BaseAppID=%BASELAUNCHERPATH%\App\PrismLauncher\prismlauncher.exe
+BaseAppIDARM64=%BASELAUNCHERPATH%\App\PrismLauncherARM64\prismlauncher.exe
 
 [Associations]
 FileTypes=zip,mrpack
