--- a/PrismLauncherPortable/App/AppInfo/appinfo.ini
+++ b/PrismLauncherPortable/App/AppInfo/appinfo.ini
@@ -22,8 +22,8 @@ CommercialUse=true
 UsesJava=yes
 
 [Version]
-PackageVersion=8.0.0.1
-DisplayVersion=8.0
+PackageVersion=8.0.1.0
+DisplayVersion=8.0 Update 1
 
 [Control]
 Icons=1
