Update scripts Using Dax now and pinning permissions

--- a/deno.json
+++ b/deno.json
@@ -3,9 +3,11 @@
     "udd": "deno run -r --allow-read=. --allow-write=. --allow-net https://deno.land/x/udd/main.ts deno.json"
   },
   "imports": {
-    "std/": "https://deno.land/std@0.205.0/",
-    "zod": "https://deno.land/x/zod@v3.22.4/mod.ts",
+    "std/": "https://deno.land/std@0.206.0/",
+    "permissions": "https://deno.land/std@0.200.0/permissions/mod.ts#=",
+    "dax": "https://deno.land/x/dax@0.35.0/mod.ts",
     "ini": "npm:ini@4.1.1",
-    "zipjs": "https://deno.land/x/zipjs@v2.7.30/index.js"
+    "zipjs": "https://deno.land/x/zipjs@v2.7.30/index.js",
+    "zod": "https://deno.land/x/zod@v3.22.4/mod.ts"
   }
 }
