Fixed capitalization in INI

--- a/PrismLauncherPortable/App/AppInfo/Launcher/PrismLauncherPortable.ini
+++ b/PrismLauncherPortable/App/AppInfo/Launcher/PrismLauncherPortable.ini
@@ -1,6 +1,6 @@
 [Launch]
-ProgramExecutable=PrismLauncher\PrismLauncher.exe
-ProgramExecutableARM64=PrismLauncherARM64\PrismLauncher.exe
+ProgramExecutable=PrismLauncher\prismlauncher.exe
+ProgramExecutableARM64=PrismLauncherARM64\prismlauncher.exe
 CommandLineArguments=--dir %PAL:DataDir%
 DirectoryMoveOK=yes
 SupportsUNC=yes
