--- a/PrismLauncherPortable/App/AppInfo/appinfo.ini
+++ b/PrismLauncherPortable/App/AppInfo/appinfo.ini
@@ -23,8 +23,8 @@ UsesJava=yes
 Requires64bitOS=yes
 
 [Version]
-PackageVersion=8.0.1.0
-DisplayVersion=8.0 Update 1
+PackageVersion=8.2.0.0
+DisplayVersion=8.2
 
 [Control]
 Icons=1
