Prepare for Prism Launcher 9.0 Migrate build scripts to Bun Remove bundled JREs

--- a/PrismLauncherPortable/App/AppInfo/Launcher/PrismLauncherPortable.ini
+++ b/PrismLauncherPortable/App/AppInfo/Launcher/PrismLauncherPortable.ini
@@ -9,4 +9,4 @@ WaitForProgram=false
 WaitForOtherInstances=false
 
 [Environment]
-PRISMLAUNCHER_JAVA_PATHS="..\..\CommonFiles\Java\bin\javaw.exe;..\..\CommonFiles\Java64\bin\javaw.exe;..\..\CommonFiles\JDK\bin\javaw.exe;..\..\CommonFiles\JDK64\bin\javaw.exe;..\..\CommonFiles\OpenJDK\bin\javaw.exe;..\..\CommonFiles\OpenJDK64\bin\javaw.exe;..\..\CommonFiles\OpenJDKJRE\bin\javaw.exe;..\..\CommonFiles\OpenJDKJRE64\bin\javaw.exe;..\App\jre8\bin\javaw.exe;..\App\jre17\bin\javaw.exe;..\App\jre21\bin\javaw.exe"
+PRISMLAUNCHER_JAVA_PATHS="..\..\CommonFiles\Java\bin\javaw.exe;..\..\CommonFiles\Java64\bin\javaw.exe;..\..\CommonFiles\JDK\bin\javaw.exe;..\..\CommonFiles\JDK64\bin\javaw.exe;..\..\CommonFiles\OpenJDK\bin\javaw.exe;..\..\CommonFiles\OpenJDK64\bin\javaw.exe;..\..\CommonFiles\OpenJDKJRE\bin\javaw.exe;..\..\CommonFiles\OpenJDKJRE64\bin\javaw.exe"
