--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "module": "src/index.ts",
   "type": "module",
   "scripts": {
-    "start": "bun src/index.ts",
+    "start": "bun .",
     "fileinfo": "bun src/fileinfo.ts"
   },
   "devDependencies": {
