Add `prismlauncher` protocol

--- a/PrismLauncherPortable/App/AppInfo/appinfo.ini
+++ b/PrismLauncherPortable/App/AppInfo/appinfo.ini
@@ -35,6 +35,8 @@ BaseAppIDARM64=%BASELAUNCHERPATH%\App\PrismLauncherARM64\prismlauncher.exe
 [Associations]
 FileTypes=zip,mrpack
 FileTypeCommandLine=-I %1
+Protocols=prismlauncher
+ProtocolCommandLine=%1
 
 [FileTypeIcons]
 zip=app
