--- a/PrismLauncherPortable/App/AppInfo/appinfo.ini
+++ b/PrismLauncherPortable/App/AppInfo/appinfo.ini
@@ -23,8 +23,8 @@ UsesJava=yes
 Requires64bitOS=yes
 
 [Version]
-PackageVersion=10.0.1.0
-DisplayVersion=10.0.1
+PackageVersion=10.0.5.0
+DisplayVersion=10.0.5-pre1
 
 [Control]
 Icons=1
@@ -39,5 +39,4 @@ Protocols=prismlauncher
 ProtocolCommandLine=%1
 
 [FileTypeIcons]
-zip=app
-mrpack=app
+AllOtherIcons=app
