--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
+remote_theme: pages-themes/midnight@v0.2.0
+plugins:
+- jekyll-remote-theme
 title: Prism Launcher Portable
-theme: jekyll-theme-slate
