Prism Launcher Portable 10.0.5

--- a/PrismLauncherPortable/App/AppInfo/appinfo.ini
+++ b/PrismLauncherPortable/App/AppInfo/appinfo.ini
@@ -23,8 +23,8 @@ UsesJava=yes
 Requires64bitOS=yes
 
 [Version]
-PackageVersion=10.0.5.0
-DisplayVersion=10.0.5-pre1
+PackageVersion=10.0.5.1
+DisplayVersion=10.0.5
 
 [Control]
 Icons=1
